# my-jvm-11

./: .gitignore  CMakeLists.txt  README.md  v1.0-code-analysis.md  v1.0-detailed-file-analysis.md  v1.0.md  v1.1.md  v1.3.md  v1.4.md  v1.5.md  v1.6.md
docs/: Phase-01-Foundation.md  Phase-02-ClassFileParser.md  Phase-03-OOP-Klass.md  Phase-04-Interpreter.md  Roadmap-HotSpot-Driven.md
src/: CMakeLists.txt  main.cpp
src/memory/: CMakeLists.txt  allocation.cpp  allocation.hpp  arena.cpp  arena.hpp  resourceArea.cpp  resourceArea.hpp
src/oops/: CMakeLists.txt  array.hpp  constMethod.hpp  instanceKlass.hpp  klass.hpp  markOop.hpp  metadata.hpp  method.hpp  oop.hpp
src/runtime/: CMakeLists.txt  atomic.hpp
src/share/classfile/: classFileParser.cpp  classFileParser.hpp  classFileStream.hpp  classLoader.cpp  classLoader.hpp  systemDictionary.cpp  systemDictionary.hpp
src/share/gc/shared/: javaHeap.cpp  javaHeap.hpp
src/share/interpreter/: bytecodeInterpreter.cpp  bytecodeInterpreter.hpp  bytecodes.hpp
src/share/memory/: allocation.cpp  allocation.hpp  universe.cpp  universe.hpp
src/share/oops/: arrayKlass.hpp  arrayOop.hpp  constMethod.hpp  constantPool.cpp  constantPool.hpp  instanceKlass.cpp  instanceKlass.hpp  instanceOop.hpp  klass.hpp  markOop.hpp  metadata.hpp  method.hpp  oop.hpp  oopsHierarchy.hpp  typeArrayKlass.cpp  typeArrayKlass.hpp  typeArrayOop.hpp
src/share/runtime/: arguments.cpp  arguments.hpp  frame.hpp  javaCalls.cpp  javaCalls.hpp  javaThread.hpp  vm.cpp  vm.hpp
src/share/utilities/: accessFlags.hpp  bytes.hpp  constantTag.hpp  debug.hpp  globalDefinitions.hpp  macros.hpp
src/utilities/: CMakeLists.txt  align.hpp  breakpoint.hpp  compilerWarnings.hpp  constantTag.hpp  copy.hpp  debug.hpp  globalDefinitions.hpp  growableArray.hpp  macros.hpp  ostream.cpp  ostream.hpp
test/: CMakeLists.txt  HelloWorld.java  main.cpp  test_types.cpp  verify_layout.cpp
